--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@ipdb/cac": "^2019.9.10",
+    "@ipdb/iso3166": "^2019.7.3",
     "@ipdb/range": "^0.1.1",
     "cidr-tools": "^3.0.5",
     "glob": "^7.1.7",
@@ -18,7 +20,7 @@
     "gulp-debug": "^4.0.0",
     "ipdb": "^0.3.3",
     "progress": "^2.0.3",
-    "qqwry.raw.ipdb": "^2021.7.7",
+    "qqwry.ipdb": "^2022.12.28",
     "yaml": "^1.10.2"
   }
 }
